@@ -108,6 +108,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Add Google Wireless Transcoder to the Unicode editing blacklist
 * (bug 10083) Fix for Special:Version breakage on PHP 5.2 with some hooks
 * (bug 3624) TeX: \ker, \hom, \arg, \dim treated like \sin & \cos
+* (bug 10132, 10134) Restore back-compatibility Image::imageUrl() function
 
 
 == MediaWiki API changes since 1.10 ==
